--- a/index.html
+++ b/index.html
@@ -304,10 +304,59 @@
             </li>
           </ul>
         </div>
+
+        <form name="footer-form" autocomplete="on" class="footer-subscribe">
+            
+            <label for="email" class="footer-form-title">Подпишитесь на рассылку</label>               
+            <div class="footer-form-container">
+            <input class="footer-input" type="email"
+            name="email"
+            id="email"
+            placeholder="E-mail" />
+            
+            <button type="submit" class="footer-form-button">Подписаться
+            <svg class="footer-form-icon" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-send"></use>
+            </svg>
+            </button></div>
+        </form>
+    </div>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal-form">
+          <label class="modal-field">
+            <span class="modal-field-label">Имя</span>
+            <input type="name" name="name">
+            <svg class="modal-name icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-person"></use></svg>
+          </label>
+          <label class="modal-field">
+            <span class="modal-field-label">Телефон</span>
+            <input type="tel" name="tel">
+            <svg class="modal-phone icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-phone"></use></svg>
+          </label>
+          <label class="modal-field">
+            <span class="modal-field-label">Почта</span>
+            <input type="email" name="email">
+            <svg class="modal-mail icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-mailmodal"></use></svg>
+          </label>
+          <label class="modal-field">
+            <span class="modal-field-label">Комментарий</span>
+            <textarea class="comentary"
+                   name="comentary"
+                   placeholder="Введите текст" ></textarea>
+          </label>
+           <label class="form-agreement">
+                <input class="form-agreement-checkbox" type="checkbox" name="agreement" value="agreement">
+                <span class="icon-disagree"></span>
+                <span class="form-agreement-label">Соглашаюсь с рассылкой и принимаю <a href="" class="conditions">Условия договора</a></span>
+            </label>
+            <button type="submit" class="form-agreement-button">Подписаться</button>
+
+        </form>
         <button class="btn-modal" data-modal-close>
           <svg class="modal-icon-close" width="18" height="18">
             <use href="./img/symbol-defs.svg#icon-close"></use>
