--- a/portfolio.html
+++ b/portfolio.html
@@ -208,6 +208,19 @@
             </li>
           </ul>
         </div>
+        <form name="footer-form" autocomplete="on" class="footer-subscribe">
+          <label for="email" class="footer-form-title">Подпишитесь на рассылку</label>
+          <div class="footer-form-container">
+            <input class="footer-input" type="email" name="email" id="email" placeholder="E-mail" />
+
+            <button type="submit" class="footer-form-button">
+              Подписаться
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./img/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
