--- a/index.html
+++ b/index.html
@@ -330,18 +330,24 @@
         <form class="modal-form">
           <label class="modal-field">
             <span class="modal-field-label">Имя</span>
+            <div class="name-input">
             <input type="name" name="name">
             <svg class="modal-name icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-person"></use></svg>
+            </div>
           </label>
           <label class="modal-field">
             <span class="modal-field-label">Телефон</span>
+            <div class="tel-input">
             <input type="tel" name="tel">
             <svg class="modal-phone icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-phone"></use></svg>
+            </div>
           </label>
           <label class="modal-field">
             <span class="modal-field-label">Почта</span>
+            <div class="mail-input">
             <input type="email" name="email">
             <svg class="modal-mail icon" width="18" height="18"><use href="./img/symbol-defs.svg#icon-mailmodal"></use></svg>
+            </div>
           </label>
           <label class="modal-field">
             <span class="modal-field-label">Комментарий</span>
@@ -349,12 +355,11 @@
                    name="comentary"
                    placeholder="Введите текст" ></textarea>
           </label>
-           <label class="form-agreement">
-                <input class="form-agreement-checkbox" type="checkbox" name="agreement" value="agreement">
-                <span class="icon-disagree"></span>
-                <span class="form-agreement-label">Соглашаюсь с рассылкой и принимаю <a href="" class="conditions">Условия договора</a></span>
-            </label>
-            <button type="submit" class="form-agreement-button">Подписаться</button>
+          <div class="policy">
+          <input type="checkbox" class="input-check visually-hidden" id="input-check" name="policy" value="policy"/>
+              <label for="input-check" class="check-text">Соглашаюсь с рассылкой и принимаю &nbsp;<a href="" class="conditions">Условия договора</a></label>
+          </div>
+            <button type="submit" class="form-button">Отправить</button>
 
         </form>
         <button class="btn-modal" data-modal-close>
